--- a/templates/index.html
+++ b/templates/index.html
@@ -253,6 +253,7 @@
       <span class="close" onclick="closeCheckModal()">&times;</span>
       <h2>To‘lov Cheki</h2>
       <div id="checkData"></div>
+      <h2>MAGISTR O'QUV MARKAZI!</h2>
       <button class="print-btn" onclick="window.print()">Chekni chop etish</button>
     </div>
   </div>
