--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,7 @@
         {% endfor %}
       </tbody>
     </table>
+    <a href="{{ url_for('download_excel') }}" class="btn btn-success mt-3">📥 Excelga yuklab olish</a>
   </div>
 </body>
 </html> -->
