--- a/templates/index.html
+++ b/templates/index.html
@@ -451,7 +451,7 @@ Sana & Soat: ${sana}
 
       <button type="submit">To‘lovni qo‘shish</button>
     </form>
-
+    <a href="{{ url_for('download_excel') }}" class="btn btn-success mt-3">📥 Excelga yuklab olish</a>
     <h2>Bugungi to‘lovlar ({{ tolovlar|length }})</h2>
     <table>
       <thead>
