--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
         <option value="" disabled selected>Oyni tanlang</option>
         <option>Yanvar</option><option>Fevral</option><option>Mart</option><option>Aprel</option>
         <option>May</option><option>Iyun</option><option>Iyul</option><option>Avgust</option>
-        <option>Sentabr</option><option>Oktabr</option><option>Noyabr</option><option>Dekabr</option>
+        <option>Sentyabr</option><option>Oktyabr</option><option>Noyabr</option><option>Dekabr</option>
       </select>
 
       <label for="tolov_turi">To‘lov turi</label>
